[package]
name = "lumos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
page_size = "0.5.0"
serde = { version = "1.0", features = ["derive"]} 
tokio = {version = "1", features = ["full"]}
uuid = "1.3"
bincode = "1.3.3"
